--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </main>
-      <footer>jethro estangki &copy; 2020</footer>
+      <footer>iamjethrooo &copy; 2022</footer>
     </div>
 
     <script src="main.js"></script>
